--- a/src/TheWeatherman.Api.WebApi/TheWeatherman.Api.WebApi.csproj
+++ b/src/TheWeatherman.Api.WebApi/TheWeatherman.Api.WebApi.csproj
@@ -6,8 +6,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.App"/>
-        <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All"/>
+        <PackageReference Include="Microsoft.AspNetCore.App" />
+        <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+        <PackageReference Include="Serilog.AspNetCore" Version="3.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\TheWeatherman.Common.IoC\TheWeatherman.Common.IoC.csproj" />
     </ItemGroup>
 
 </Project>
