--- a/src/TheWeatherman.Application.Contract/TheWeatherman.Application.Contract.csproj
+++ b/src/TheWeatherman.Application.Contract/TheWeatherman.Application.Contract.csproj
@@ -4,4 +4,13 @@
         <TargetFramework>netcoreapp2.2</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="2.2.0" />
+      <PackageReference Include="TelegramBotClients" Version="1.0.7" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\TheWeatherman.Common\TheWeatherman.Common.csproj" />
+    </ItemGroup>
+
 </Project>
