--- a/src/TheWeatherman.Application.Implementation/TheWeatherman.Application.Implementation.csproj
+++ b/src/TheWeatherman.Application.Implementation/TheWeatherman.Application.Implementation.csproj
@@ -4,4 +4,12 @@
         <TargetFramework>netcoreapp2.2</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="9.0.0" />
+        <PackageReference Include="MediatR" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.2.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
+        <PackageReference Include="Scrutor" Version="3.1.0" />
+    </ItemGroup>
 </Project>
