--- a/src/TheWeatherman.Application.Implementation/TheWeatherman.Application.Implementation.csproj
+++ b/src/TheWeatherman.Application.Implementation/TheWeatherman.Application.Implementation.csproj
@@ -5,11 +5,20 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AutoMapper" Version="9.0.0" />
-        <PackageReference Include="MediatR" Version="6.0.0" />
+        <PackageReference Include="TelegramBotClients" Version="1.0.7" />
+        <PackageReference Include="MediatR" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.2.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
         <PackageReference Include="Scrutor" Version="3.1.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="BotActions" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\TheWeatherman.Application.Contract\TheWeatherman.Application.Contract.csproj" />
+      <ProjectReference Include="..\TheWeatherman.Common\TheWeatherman.Common.csproj" />
     </ItemGroup>
 </Project>
