--- a/src/TheWeatherman.Api.WebApi/TheWeatherman.Api.WebApi.csproj
+++ b/src/TheWeatherman.Api.WebApi/TheWeatherman.Api.WebApi.csproj
@@ -8,4 +8,10 @@
       <Folder Include="Controllers" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Serilog.AspNetCore" Version="3.0.0" />
+      <PackageReference Include="Serilog.Exceptions" Version="5.3.1" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    </ItemGroup>
+
 </Project>
